Problem 2/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> ON
Rule 2     start -> DAY
Rule 3     start -> ORDINAL
Rule 4     start -> day
Rule 5     start -> empty
Rule 6     start -> MY
Rule 7     day -> ON ORDINAL DAY
Rule 8     empty -> <empty>

Terminals, with rules where they appear

DAY                  : 2 7
MY                   : 6
ON                   : 1 7
ORDINAL              : 3 7
error                : 

Nonterminals, with rules where they appear

day                  : 4
empty                : 5
start                : 0

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . ON
    (2) start -> . DAY
    (3) start -> . ORDINAL
    (4) start -> . day
    (5) start -> . empty
    (6) start -> . MY
    (7) day -> . ON ORDINAL DAY
    (8) empty -> .

    ON              shift and go to state 2
    DAY             shift and go to state 6
    ORDINAL         shift and go to state 1
    MY              shift and go to state 5
    $end            reduce using rule 8 (empty -> .)

    start                          shift and go to state 4
    day                            shift and go to state 3
    empty                          shift and go to state 7

state 1

    (3) start -> ORDINAL .

    $end            reduce using rule 3 (start -> ORDINAL .)


state 2

    (1) start -> ON .
    (7) day -> ON . ORDINAL DAY

    $end            reduce using rule 1 (start -> ON .)
    ORDINAL         shift and go to state 8


state 3

    (4) start -> day .

    $end            reduce using rule 4 (start -> day .)


state 4

    (0) S' -> start .



state 5

    (6) start -> MY .

    $end            reduce using rule 6 (start -> MY .)


state 6

    (2) start -> DAY .

    $end            reduce using rule 2 (start -> DAY .)


state 7

    (5) start -> empty .

    $end            reduce using rule 5 (start -> empty .)


state 8

    (7) day -> ON ORDINAL . DAY

    DAY             shift and go to state 9


state 9

    (7) day -> ON ORDINAL DAY .

    $end            reduce using rule 7 (day -> ON ORDINAL DAY .)

